chane size of pictureBox

--- a/RoadWindow.resx
+++ b/RoadWindow.resx
@@ -117,6 +117,213 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notLimRB.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAP10lEQVRoQ8VbB1hVxxJekKKCSFFUYjf2QopdrNgAxR4/G/auiMZYAvqSEDViR1GKithrTIwaJbYA
+        kcSSWIBnNAE1KiAhNkSuovv2H++Qg97wonIv//eNOLN7zu7cLVN2j5BSFkipqali/vz5YtiwYWLatGli
+        1apVYvjw4aJ3795i9+7d4tChQ+LEiRMiLi5OHDx4UKxfv1588cUX4vjx4yIqKqqE//iJHXzcO833bOR6
+        uH2depffLu2Q4Wxl/dDWzPxxCWGWq+hJueIlsms6OmU2r1r9t/Y1ax/p36JV0IwRo7wGDhxoGx4eLo4e
+        PSqmTJki9u7dK3744Qexf/9+sW3bNrF582axZs0aERISQn+/+eYbMW/ePAHMmTPHoD5aMijU0v9THgrH
+        xsaKP/74Q1y8eFEsXbrUeZiH15wezVskVLC316l+qFZej0pZWD7u3rRZ0syhwwPHjRvndPbsWWrnwIED
+        YsuWLUWnfM+ePcWePXtEUlKS+O2338Sudeu9hnt6/Whrbf2UO8/UsGFDOXjwYPnpp59KNTPkV199JdXM
+        yKOvv/6a5ChHPVdX13zPg2wsLXPHefeI37YqxDMhIUHExMSQ8lDcpMr7+PiIIUOGiNOnT4vtEREefdu0
+        vcydBDk5OUlVR6qpKa9du6Ze8+pQIyx37twpR4wYIZ2dnfPeDfqgvful1fPme2IJbN++XQQHBxtf+alT
+        p5LyM2bMEKNGjbL26dL1CHcI1KRJExkRESEfPnyoHi08PHr0SG7YsEG6ubnltQUa06378bCwMLt9+/YJ
+        1a5QM8g4ymO0Z82aJdSUFeO9vPu/ZVsqizvRtGlTmrqmwHfffSc7deokLS0tqW3nkja6RZP9fKH4sWPH
+        xGeffQbdC0/5wMBAMWnSJHrxmM5dNqFRUPHixaWabqqa6TFo0CDqA9Og1u0OYy9Yt26dYgtJ+Rs3bojQ
+        0FDh6+srWlWqcpYb69q1q7x69aqqYnpgCaAPHTp0kNOnT5fm5ubED3DvmBLoH2Cn/i8CAgIM6qMlg8IX
+        SdntYvXLlL2BBkBLlixR4qIB2kYfevXqRXxubi7xTM4Wlg/alHYsh9mqigskg0Itqc3GvIFT2dv8cuVg
+        KHHRYMWKFdQHWAAgIyOD+BIlSpCpfP/994kva1YsK3LqdGdVxaBOTAaFWura0JVGHFPrxx9/VKKiwerV
+        q0mxCRMmEP/48eO86Z6SkkIyrTVwq1P3wd34n2yV2KBeIPH06dOXiAvHdepyhl/2/fffK1HRYOvWrdQH
+        ZWqJV32Ujo6OJON9Z+jQocTPnj1b1qpVi/7fq0XLDFWUT2EtYVq/RChYOXbCKrwAtGnTJiUqGuzatYv6
+        gI2NUb58eZKxA6X8DuKVD0K8coOJB82bMAmj9pLiIIPCn9ZEtOWHP/roIyUqGsANRh+UQ6WXSOni4kKy
+        X3/9lXhlfolfvnw58VgOcI9LlixJclDcukhsEi/p+ZIA9G7VavfxEDaQogKcJvRh5MiReomUFSpUIJmK
+        JYhXVoj4ZcuWEQ84ODiQA3T79m2p3F4qr1XBRff9GF8LVZxPz3wMKHzKtDA8UKxYMZmWlqZEpofy16nT
+        yrHSS6R86623SJacnEw8pjj4lStXEq/T6WhWQHl2r7kOaNXEydFKlE9X8eTJEyIwlzZursiVi8pz4zWO
+        dcyoXLkyyWDaABU2E484AsjJyZG2trbkccLuA8olpzrlypWjv6CEpcHvqLoiOzubSNy7d49I1RezvHud
+        RKXq1avTC0wNFZVRJ1UMoZdI6gtkrDhGGjx+AEApIW1sbGSpUqXoRwB4H8DMQXmbNm2ev7dbzyRVLJ49
+        e/Z85PEPKCEiqioqgL788kslMi0OHTpEbU+cOFEvkbJGjRokY3PGtp49TGWZaGMrXbo0TXtARXVUZ+7c
+        ucQDhw8fJhnozOcLXWHOMdspM4KRn99/wDcoxJoxNaKjo6ljY8aM0UukrFmzJsnYnIWHhxO/aNEi4gFM
+        dTs7O9rhAd7gMOVfBC+d5YN8YhQr1DOCcmLbnaqYVbCxVZyQKhp6XttEQIiKdkePHq2XSFmnTh2SXb9+
+        nXjeABcuXEg8gA0QU50V580NFsAQOCaoVqbs07313yuuRILycEE9+o1EAejmzZvPa5sAJ06coDa1iiM3
+        ABkyOYDqH/GYzgweRUx7ICQkhHgVzBBvCJmZmVQHtG/qjFnKIghx6tQpMbaF22kImzVrpq9qfJw5c4Y6
+        wkEK0LJlS5LxiLPiH374IfEAm7w7d+4Qz1O9IMUZSIKg7vQ27S8qJ0mIXVVqmDVQTgCEvIMaGzziWsWb
+        N29OMvbcoqKiiP/444+Jx/SGHccav3v3LsnYyfm3ITYiP9Sv41RG91XlKuYiYoBPSwhACQkJ+mrGw5Ej
+        R6itYcOG6SVS1qtXj2Q3btwgft26dcRrR5M3NwQ1AI94aGgo8f8GWNJ4BnQocF4Htd77LgSDjKuxwYoP
+        Hz5cL5GyQYMGJGPFeXPTKl6xYkVpb2+f58Dw5hYWFkb8q6BatWr07EqfEcHiE+9esWA6d+6sLzYOjh07
+        9pLinHxgxTmQQf6eUaVKFWlmZvaS4kFBQcS/Kj744AN6fuQ778eIIa7vpICZPHmyvrjwwSHmkCFD9BIp
+        27VrRzLe1dm700aRPErKDyGevTutrX9VBAQE0Dv6IEnjXrFKJpjFixfriwsX586do8YGDhyol0jZsWNH
+        kl25coV4pMbAc7ICYMV5c+M1/qb9xFLBe1pXrpYlGtrZK4Mn5MaNG/XFhQdW3MPDQy/529wkJcHN/ltx
+        Pz8/4oEXFeedvzAGiM1nfXtHnahr70CeXWH787/88gs1ghQ3A6lmyFjxgwcPEq9VnL07VhxZJPBvMtW1
+        YFfaxdIqV1RycKSDxQMHDuiL3xxsx7VTne3477//Tvy+ffuIxxpkwJ/H5nb//n3iOZBZsGAB8YUB7ls5
+        C4un4m3l64LBTlsYYM8NJyoMd3d3kvGuzpubNmZ/carzrl5YI87gCK9S8RJKeSvrHDBbtmzRF78+eI1r
+        d3Ve4xyWsuK+vr7EA6z4X3/9RTz76sbwODlZ0sDB8Ylwcy5P+TocCLwJLly4QC/19PTUS/5WPDExkXje
+        3LTpKY7ZWfHIyEjijeVqwyPE+xs7lX0kBjd6Nx3Mm2Rpz58/Ty80tKuz4thTwPOhA1C7dm2SIeIC2Lsz
+        ltkF/P39qY3OlZSJ923a4gKYnj176otfDYbMGdtxjhVOnjxJ/Lhx44gH2Lvj9BQuIoA3dj6BPbwRjd5J
+        Egs9uu0Agxj5VQGThWe15qxPnz4ku3jxIvHx8fHEa3PvuMQA2a1bt4jfsWMH8ThtMTb4NOeL7r32it1j
+        Jk0GA+I4+t8A3hmewfRm9O3bl2SYDQDO9sBDznjvvfdIxhsgj7gpDkfS09OpLdD+gDlTxE9+0ys7l7R5
+        BsHatWv11QrGzz//TC/QTvUuXbqQ7PTp08RzQlKbpeE1ziOO9sBrszTGBO4Iob1qZco8uzh3jotQm43w
+        de+UAaFWmX8CBylY14z27duTDDs+wIqPHTuWeIDNGWdgDIWuxsaAAQOozYnNWmQqD1QI5VSIg/5zad3j
+        yJe9K0PAqKIeRpnB0RkrzpubVvHGjRuTjHd1nupa787YQEiM/D7aXeXh/aWyKEKoKSjStmx1tdafdf/T
+        SY0hxb28vEjGm9upU6eI125uvKtjvQG8uU2bNo14U4EDGhsrK5m8cHErNUhCpKWlUQI/wKv7LRQisHgR
+        sNUo0yY8cC0EMlac3VqtyWTF2Z/nqa5NSJoKHFt86Nb2z5wfYsxxm5POrHCCcXXLNj8UgtgxAWCrIcP0
+        ZrA5wxQHWPFu3boRD7Dily9fJp4VN/WIA2ySQTFz5gbifnBQUJAQOp2OTi+yY09ajXBrS7E9X/bhh5BL
+        Z3h7e5MsNjaWeJ7q2s2Sr49ysuLbb78l3pjZooLQr18/ar9HvQaPHydecFAzUahBEUJtcERI4qdEbp6N
+        SqDPP/+c/uKeC6N79+4ki4nBiY/hEW/dujXJeMQ5dNV6d6aEdtSvRG2CLc87n8xTPisrS2THx5kH9et/
+        kytr43E2Z/DjAd4A8asyGjVqRDI+9UGkCF5r600N9uj8OnZ6lHs31R6zHLMdJJTdJVJRFa3/u8fiWlgI
+        M3qAc+KI1MCz58ZZGq2tx81qyC5dukT85s2bideaPFNj5syZ1Aec5N6Jjx+vRHmjDhLJycl5lJKSQsLD
+        Af/5mh9q27YtvYCvobHiOFpi8KEDBzKceirKEeflBgodPTYBg4t1rvahPKLpzvTgwQO6jfUkManU1HYd
+        7/HDOEkFOGbHKDPq169PMl4OyAWC157ImBowv9x3z9p1ddmZqS748gNfhWiJbiloie/hZZ0/17xxpcrk
+        88MtZJcVB4UMHGxCBpcX2LNnD/HaFJapgf0GR9foh715MZlx9mxvJaZlzUucKd8aeJEyDh6bVKlMWXoR
+        CLehGHzbkU0eu6za8NbUULNXVq1alfqBG1lXtu0OVmKRkZFBMcyLZFBpLf0cGr7QQlXDC+Ho4JflFDSi
+        JIB3da0jZGrg6hlHjaCza9bsUmKDOjEZFGopLCxMrB09dlkJvQVg4vCXj32LUnEsO76jZ6NGfH9AwB58
+        9KSKCiSDQi1R9KPwU9Sm2S1qPreZIKS6ecSRmi4q8PkdqKJa6zeio5fjczR8dqKKCySDQi2x8viE7N6F
+        xKFDmzSjEx4mretrSuAWJvsfoH6u7+amnzuPq1z0LZCamQb10ZJBoZZY+SVLlhCflZHWYMWgwde5URwh
+        4/pnQXmAwkRqaipdQsbJDvdhXvcemQ/TUlupYvosRpXT5ybgCyKDQi2x8sHBweQDwF4+kTrrxD17I7zq
+        1sv7hg6XG9ApTmoUNvBeHHTgwwJus2Ot2jJ+fdS3j+UTJ9ht5CbUxmcc5XF1E18zRkZGimvXromcu3++
+        u/GjGYnVHZ7ffWdC3I+kCH8E8LpAWhunx5w0YXJWa3te/wHXsv5M64x8BD4nwweO6enpxlUea3/Dhg00
+        A6Kjo4WK/cXV/yb1XzFi1O9NXZ7flNIS3GDMCPj6cXFxFGXhzE51mswTTCeSHdix4UjhPi1ifphTKyur
+        fO9qUsFFhowa/UdKYuL4bCmL4ZNS3CPEp2/KszSd8vicEx/z4SvGwMBA+qTz/p3bbvuWLjvk2979YWVb
+        23wdf5HghFhbW+dbu4aohl1p+UnPPtmx4RFH72Wmdn6qlMYo+/n50aYWHx9fdMrji2Z/f38xe/Zs+u5u
+        69at4pGUpdOTk70PrwzZudzH5+qQmnUeeNjY6TpbWOu6mlvqPMytiLoq8jS3ygEpPqebRfFsz5J2OaPq
+        NXwYMXpMcmxE2Na/rl330knpiATEokWLxIIFC6h97OhQ8PWVl+J/7Pyl7dT7TSkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="setLimitRB.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAQAElEQVRoQ9VbB3iUZbY+6QnpvUIocRMwVEFAihRB8OrVZWXBRdmFiwXXRfZZEUF8KFJUdmFZHgVx
+        VeRSpGgIASkWEiCgoQQIkDa9J5lJITOTZGaSc8/5ZwgzkwFdLyVznud9MpmZ//vPe9p3/u/7BnLDU2+D
+        NDgUngJHQ5PgSHQ32JPYE3Kzh0D+4DGQO3I8XF6wEMSrVkD1h5ugavOnULFkGZS8uQAKp/4Rzs75M3z7
+        zDNwePj4sGMDR/TLz+z37In03guLYjM2Fken7dQEJRxS+EV8qwmKO3I5quueswmZH53o1XdJQb9hzxUM
+        HfvQqaenRxe+8Ce4svANkC5bDefmvgqVi5aA+h/rQbv+Y6h86x2oWLYUSpetBNH8xVD6+iIonf82lL84
+        D/KyBsLxURNB//7fwbR1Cxg/3ewRHgg745eTr97yOVSsWA2XFi+CU09Mzbww4rH5F9MfyCsPS5LLAmNb
+        lf6RqPaLQA1BFRCFCv8o5PeU9FpFr/l9jS995hOJioAYFEWk6i51zzpcMunJN8rnzu9X9Jd5ULl0BWjW
+        b+hE5Ne8CzWffQ7qjZujr019YU5Z5oDvJSEJTSqfcFT7RBDhcFT5EUn/CDtZgfTtwd9XkSHUNIYCwlAW
+        FGe91r33ibIp016RrX4/TrfpC6hcvPQ+k3+brL9yeYRk6vOLKlJ7y6WkrIqUVZEXPZH61WBjQCjKfMJQ
+        nNBLKZ06+62yBYujK9asgtLlq+4t+eNDxkLO2Mfh/G+nTROnZ5UqoAt5KNSz4rcDR4Sfh/dvAU4VFRlA
+        SfcqT+ohuTJtxv9cWfkeiN54596Qz+k3FI4PHJ1c1DVrh4zCWgPhDuVuEdJMkKJBAcGEAJSBH8rBH6X0
+        WgqBwl8Z/c/v8+dKCBG+L1znaTwHOK1k9L0rDw45WjbrL31KFyy7u+R3JfeCo72yHxeFpkjVvrcObxV5
+        k3NVToSkEITS6K4oHTwKlTPmoG7pajRs+jdW79iN+j05qN+5Bw2bP0XdsjWonPkySoeOQVksfZ+MxUZh
+        L/N4nu5jN2wIisNS6y8/OX3mtTdXQPlLr99Z8keI/KGYbpAf0+3PCv9Yq8aDMgqq2qyMgrwpY692zUTl
+        7Fewet9XaJTJ0GK1YCveXmwES6sVTUoF6nNzUfniqyjtliUYkMe9VTRwcZTSZ6Vjnlp+7eX5Pnm9B90Z
+        8geJ/DdE/mxY8kqVfzRNS6yAuxJ20mLygnTMBKzZsQvNNXpss3P61cLGMhn0qN+Xg4qJT6GI8l3OqeEh
+        xTgKFb7heLVX/30H+jwU/MPox3+e/H4i6QlMfj+Rz4tIgeKgxI1q9qzbDRmcexzessHDsTrnANrafs6/
+        v1ycjcdRoT98BKUjxlIk+Nrrgid96P3i8LTcHx6dFKxfu+725A9FUkh7QlQS5EYmw9kuiR9wU9LhJgHR
+        9nwLikL1u+9hs8lo1/IuS3NLs3A/SZdYirbgDnoJulGElKRlfa1b80GAedsnRHSTR5BnEz1if2Qi/Bga
+        P0/tH+PhBtFC+Il69EHDseP/7/D+NVJ78jRW9h4kzBycju46yqlQVo4Y/4V++y6o27YD6r7Y3gHwTVLP
+        DjhIVT0/Nn2cyj/Gas9xp4Gp2Mkp7CofGYMNEpFDlXsvbHCjRo3Sif9tTwP3IkwFkA1Q/vtZL8rXfwTy
+        NesJ/3QBHA5LccEhwtHQlARZULxc7cGiMvBB2YT/QqOh1q7FfRaT0YSSqX8gA/h0mBJ5FhAHxzdemvZC
+        n5JXX4OSl+a6AL6O7e6CvXE94EJYymeaAFePc47zFCZ+9HE01dU7bt05pLnJjJInnqUaRH2Bk84MNXm/
+        JDWroOClef6FL8+HQuoDbgB2xHdtxzbCoejUSYpA9rhbuNNcK+r/MDZqNULI3Y88v52YdFqUZg+mIhjk
+        qjfzoAJYNGL8vMLZc+H0zBfbAftT0u1IFf6GlneJq1Bz+DiFkMonFMXhidhwsaTTkXaWhpJrKKLuUGiR
+        nQwghH9IXO2ZkY+l/DTuCfhp7GQBcCAqVUAO4XR48nwNPUu7XEiFg8Nds3a94xadW6o/2YoSoRt0bb3Z
+        AOcTM9cd6TcGvs0eJQC+is+ArxII8Q+El4YkUJFzD3d66Bg1jubXFsfwnVusbW0ofXIKhb9r/rMTyfsN
+        B7OHpOYOGAYH+g8lz6dmQE7XDCiI7zZH5eZ1BVlP7B+OtQUFjqG9Q+qKL6IoNI7aXTfvUyqfScl45/DA
+        oXC03xCA3bHd4MvYdJ+SLgmn1U5fZHAjo5gyHa2dOtM7CjfYitlzKV0p/F040cNPWKIo58FBwV9nPwSw
+        L4Yam6ju/RWBMTaXCu8bSU9KoVh3/IbXvcsA9ReLURRMsxY9e7gb4GBa1sSdvQZQb9+zDxTFd1/aMdeD
+        UPbIeGyxWR3DeZew1tJJv+2Q+8zzTFTah3vTMgD2pvfyKQlP+NEl5Kk4SOiiqg2b7SN5qej/dzelrus6
+        AE/j10LjL+3vlu4Lx1J+kyYNjDG6tIbUFEhpXm+srHAM451i1mhQHpdOUXzz8ZerviQoxnyw78B0+C4i
+        fTKvm7cTJwirMcPHoMVmcQzjnWJpa0XFiHFE3q3w0SxWkDnoGSiI6bZE4xQWDF6cUL32V8cQ3itcolVz
+        5wlPoc78eBnuVHz6EjgfEb9V41bseIqo2vK5fQQvF92mLUKHeoMbR7mWZrIfk3rshCuB8UddKj3nBE0P
+        9d97V2NzK6k99gOK6dnEvmvkMACv9SVknIGrIUlFzpWeFwHlIfFounzVcbl3i/FSCUqCqdvzC0MFOZlX
+        fbjil0WllYMsMK7MpbmBcJRGpWKTTOa43LvFLJWiKDoNFbzTI/CMFtpcRViyFugNtSv5MJTE9cAmtdZx
+        uXeLWanEirg0YVW3nSNBFhJrAHVAjM6+XXyTvDi2G5pUKsfl3i0mhRwrYpm8a5sr7xKnh8qQhFIXz1Ox
+        k4Ynobny/i1O3kkxlVegKCKRnlVukuecl0amKeFqMLW2zvM8b/1QXjSePe+43Lul/sciFHP3yjs6N8iT
+        IcoTel2Fc+Fph92bHCmEYG3OQcfl3ivc5Oj35gh8nPnxoYmStMzjcCax+8dat4d+3h3Vrn7fPoIXC5PX
+        rlgj8HHmp6HULs7s/xmcyRr4V7aE84f8GKh49jlhf8ybhRc15FOe67ikBaF4cdjYN6Fo5OQJSl960zn0
+        oQtKez6I5sbOtT7/n4ql2YzyzAHE52bYCwuyFOnFf5w9CX56YXZyZURSA69utpOn3lfiF4r13/3gGMY7
+        5frZYpQHcjt7kxu/FkWmNFx+c0ESiD/aCOUDHs5nb7eTJ0gpVFSvvP6zBwo6q3C+q99aKjyhOvPikx6i
+        zAE/qTdsAWjKOwTqWXMXyt0X+nmjIqUnmqqr7KN5mTRfb0RJRj+XkGcwz7IJT6+Sr10H0JiXBzWbt2RK
+        QhJaXBb7aG6UkNWq1m10DOddUr11u3311nnzgkKeepg29YrVQ2q3bQMw7N4FNTlfQeWw0cdkblZS+HRB
+        cUZfNNd2jh3ZXypNTU0oGTSCqjzzuVnIZRDM759rLjzhazmZD2A9VQi2Cxeg5h//fFbKzb9T1eeOiL2v
+        XfmeVy1cazdtQTHvOQg8HHyIF5/wqlq2Ym7r5fNgO30SoOVkIVhOnQHzydOBsr7Dr3bY5CPvi2JSseFa
+        mWPozi1GhRJFKT0oavnIivP0HUI1oK/OcvVydJukAtoqSwFaz16A1qIL0HatDPTvb5gp5nMu3As7GYAX
+        AGUTnkSrrXPXfhvNTbLfTafwdl2zs9cvX6xet2EpWkyAeh2gQQfQXHDcjhP5YD5zylc8+rHjwlq308V8
+        zItPSqqWr+m0Ux/rpVq+kvQMEhYrnPUXTn4OG62w1WujsLEGsJ7IE8BWIWpHm1IFDUePD66MSGlR+rqe
+        pVX5haPENwyrtu3qdG0v61P95T6U0PSs9nU7SkMzWGVgJNZ+993zrbZmsDUY2gFtxcUuwMoKqHrtb2vY
+        0wqXMznRwoJAZUg0VuXkdZoCKBD/Ph/FkUmUnrxac1NnXqmV8jL83xbmWtEKFmMdob4d0FZWehOlpQJ5
+        69Vr4dKBo68IRz7byTtAnaAoNBp1O3bfdwPw/WsOfIPiqCRyzI0zeU6zFTlQOmycymzQprQ06qGZQt0Z
+        0FZb44ZqwKZGMBZfeFiU2NPc8aAfWZYMIKY6oFmzVtgQvB/COa75cBNKQmIEfVx1JFB1r4xKwbpz5yY3
+        NxnBTLzMxM8ZgNq6jtDUAjZaoX533gwRL/t6GJwfELi4yKb/CZurauwa3SNpqq5B+ew5KCKC/LMU51AX
+        wP17QBjqt+95x9bcApYavUcAqqny3QpGIxg+3TpfzKezOhiAl4D5oJ8fSh4YgDVf7sG7vbPHUabfn4ui
+        3/SzT2dCVXclzj96kJCuug8/2kBpATZLE1hbPIM8rb01dGQAUwPoP/5kgagLHzn1EAFsBIoACbeOE5/C
+        +qPH0NJ6Z+cDJl2ffwIlT02l+4QSQQ+1iEGRIPKnGelf/9rYis1gtbWA1UpEbwHPpNtB5LUqwIYaqD94
+        ZJYosYdNyfO9e5gxhPYxQNjqkg4egboP1qOxXCQo/msKI5uvsUKMur9vQMnwsSj15VNh/KDi1LU5wFWd
+        i5s4Ph0N+3MXtWIjWK/riSAZwAPpG3Aj6w4HebUU0NICDWeLfycd+IiBl4V4v8tdCQH8FEVRwAeC5WHJ
+        KHt0IqqXLEND7gGsv1qKTbX1aLNahYJ1A/x/U109Xi8tQ8PBb1Cz7F1UjJuMsogUYRw+JcJPZJ7vx2f9
+        KfX6Pmysu1D8PBkNrI1asJLD7hj5VgM1BjYrGGt02cqXXy0Uk4c7nnZ0BZ/FZ8V5i1hCf8WhSShO74Oy
+        gY+gdOR4FI+egOJR45EMiiJ6XxqaTNETInyfW2rheg/jtoOMLOLxn59VatJpR1h4Ljc33B3ylusN0NxC
+        IYUtQYb9B5eJsweb+cQzLwh6VM4FFK7sPSFnQwTDMeQ8lRKE7aRbedcdNIaMVJdkZGPVrr3/JtKxFmyB
+        ZiJ+V8k3UZdktdJ0SOHVXK8fqH3vgzxJUgYpw7+a8jDf3iHw4ymPz1EhSuqB6qUrCo163URKG7BYGqGF
+        nHJvyFuoDzCboLWtCUx08zqV8mnN8lX54gf6UnhTW8w1gbzjftzlP4VwPUXEjZ+iidOzUPP20qI6pWKG
+        GdGvmcLcarWApeX6vSdvI4s3tpoEA7AHrtdVj6zau+9j2fSZCl7/4+nPnr/8eznXAwI3yDkbiD8Xwp/y
+        3V4nqEtL7oGyKTM0Vdt3ftFg0LKn/Yg4mGxN0NRmJhL3mbyxleZTgpHm1mZSrAkx0qjTTdbnHFinXLy4
+        UD7xabmsV7a+MjzRIA2MNiiDYgyqwBiDPCDGoAyM1asI0qCYmoqwBK0svXe1fPwTKtUbC0/VfL1nrUmr
+        m9SCGCMQpry2tTYT8ZY7QL4J/g9kQNLDjl4IxwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="delLimRB.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAIM0lEQVRoQ+WaeahuVRXA79MGK80cyjQ1MVErG9QcStEkKjNRSZTCBjIioigTxXAGKbQcQMHUVIRS
+        cyhRLEycmqRMK8qKikaxtMhZy/H6+93z9vvO/vY6+/vOue+9ex/3jx/37v2tvc5ea68975nZ2dklS5i5
+        VAgzlwqjxAz/5yyDtZb/zX9rKViljH+3H2svJ69/S3/0oRfAxvAGeBNsCi+CtsxiZl14G3wMPg67wXrQ
+        /F4xXsO3haPgevgBXAj7gUqT3GLlFfB5+B08Dc/AH+AT0NS/YvxGcATcA8+BIir4IxwOL4X2xxYT68MJ
+        8CA0pjU8Cz+BN8OyLuPtG7b6lZAMb/NP0IOL0QEbwvHwEIzXW/4M74K1asZvB9+FyHjRAZ8EvTxegYXC
+        unwRHoaozvJ72BE6W15eCV+BJ+d+ivk3fAZGg8jC8XJwfHoAorqKff8MaOpLTpfxTg1vhzugq/XlP/A5
+        WMgI0JhJhtvfb4BtoClHbpfx4rTm6G6oTHKAg6Peb5dfHWi43x4f3Npo+A9hZ3C90pTll5rx8kJ4H/wW
+        ag74L3wBnGLGdawqdPZnwW9HdRLrfDvsCkbzqDy/lsZLW6iJgH3hN9CIxlgJw88Rd1zHyuZl8Gkw6qK6
+        iIb/FPaAUYsnkEhkiUKwiYB3w6/AMGqKlNjvjoFV2QVcpDjT3A9RHUTDfwbvABdspR6kElmiEGzQAfvA
+        XVDrAs6xx8EGEOmZD7a4hv8Lom+LjaPhe0LZ4gkkE1miEByhF98Jv4AuB5jvXOsqa2U6QMNdXNUMFxtn
+        L4hbPIFkIksUgjkq3RvuhFoX0AEngmuGSE8fXE26rL4Xom+JTrdbuoKrGy6USGSJQrDELmAEGF61LqAD
+        ToFNINIzDRr+YfgHRN9I/BreA5MNF0okskQhGOPUYXg5ldQi4FH4EgyJgJfAofB3iHQn7gYNn37LTalE
+        ligEu9HL7pNdRNQi4DE4FV4NkZ6IdUDD/waRzoTbVtciRmOkJ4aSiSxRCNZxRHX1pANqEfA4fBVeBZGe
+        Nhp+CPwFIl2is119ugrtZ7igIZElCsHJ6ABXUR56TOOAWgRo+MHg9rMrmsz3cOJAGHa6hJZEligEp8Mx
+        wAi4GWpd4Ak4CzaDcR0vhgPAQ5OobOJPcBAMP1ZDSyJLFILTYwTsBDrAk59GdYkOOAd0QDpY1JD3gy1a
+        c55d4QOgo8a/Pz1oSmSJQrAfRsBb4ftQ6wL/h6/BlqAhDloaHsmKDvkr2CWGt3gCjYksUQj2x9Z8C7iH
+        rrXi/8CD0cPAnWMkk3Ce/yA4JkTfRKhlQw/yjEhxf3SAh4We/tYiwBMWN0RdTjJfwz8KzvvRtxqQHkKe
+        ESkehmPA9nAt1MaAGi5pPwKTD0yRHkKeESkejhHgxcc10NcBHpS6pq+3eIISQ8gzIsXzI0XAt8Ewbz5Z
+        p5/hQqkh5BmR4vljBLweboXaICgOhB5Du42NdMVQcgh5RqR4/rgE9YDhlzDJeLvHVeDliVET6Suh5BDy
+        jEjx/HDud/nrddEkwxNPgbdGXqBEOksoNYQ8I1I8HA33luRHUJvyIoyAq8Huop5I/whKDCHPiBQPwwp7
+        TXwbNJ/pjw74DjhjpKVwDNJDyDMixf2xr7rRuQVqLe6B58+hdjXmDOFaQQd0jwFIDiHPiBT3w0MOQ/0m
+        mGS4o/oO8HWoOcAIcLXoQ4nYAUgNIc+IFE+PoWkFb4TaosbzvWMh3fK8Bi4ANzyRvKjve+C+oewCSAwh
+        zxhXOj328TeCFawZ7rHWyTB+wbkFuNOrOcBIcsfo1nm6w8oINCWyRCE4HWkZ671+zXAPNE+CrmstI8C9
+        vnv+qLzoALuU02d9EOwCLYksUQhOxgo4HV0Hk1rck1yfvUR6Eh51nwkee0V6RAe4WnRQnTwNjoOGRJYo
+        BOs4+LgSc+NSG9w05DSY9ghbB/iYYFIEOJv0dwClE1miEKzzOnAhUmtxDTgdpjm5baO85ewqkV7RAa4j
+        dodBS+EsUQjG+CENvxxcijZqSpLhQ29tLOcTGbtMpF90wI/B1yTTHWNTKpElCsES+7iGXwa1Laq7M0O3
+        b4uP42PIL0MtAtwzuHfwHrHXUjhLFII5Gr4VfBNqLa7hjtrzNTzhWOG93yMQfU90gPeHXqPVIwDpRJYo
+        BHNeC9+AmuHO0+eB01akYyhOj06TtedmOsDlshHQ7QAkE1miEByxOVwCtWWohrtSiy4lVgY6wKvvSQ7w
+        Ct3HFPFCCKlEligEm1DXcI2qtbhOuQg8i4/0rCx0gEvjrpeWogN8qOB9fXnOj0QiSxSCjeHnQ63FdcrF
+        YLcYturqh0tjHVB7hqYDfLDge6K8C/BrIktkQs1T83NhkuF2h1Xd4uOkJ6e+BNPQqG7m+3DhvTC64uKX
+        RJZYIdD027Nh0k7LAXBraJddXfgQ8WiY9B7Pk6TRSpDcRJaY+7F5Tuarqtrc6hx/BTj1rY5Q78K6Hgm1
+        d3lOvQ6UzSMpchJZYu7HmZldwMv/5ucSDfeA0fesC2l4wgjwHXCXA2z9S6FpKHISK/6Zo1m6fgi6NhUa
+        7np+sRie8IGiL8Hvg/E6uwR27eHgTUa38fYLn4VEIZ/O07yBWUyGJ4yAT4EvO9JmS8O9/vays3kdSm4i
+        S5DUKI+i3C6253X7zbegfpC48HjT40MHp2evyd18+XLTk6Km3i17s8Tcj80d2f5gP/G5me9tnFcXenCb
+        Fud1p2kbyu7pWeFow9OyN0usEGgc4BTm4OdJjSGzJhjexvqWdW7ZmyXGBC1oqKxpRtdp2Zsllhph5tJg
+        duZ5sW5qYWWgjokAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
